name:                ProjectEuler
version:             0.1.0.0
synopsis:            Project Euler solutions
homepage:            https://gitlab.com/wkoch/Haskell
license:             MIT
license-file:        LICENSE
author:              William Koch
maintainer:          wkochbrg@gmail.com
copyright:           William Koch
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Gitlab at <https://gitlab.com/wkoch/Haskell>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ProjectEuler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , ProjectEuler
  default-language:    Haskell2010

test-suite ProjectEuler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ProjectEuler
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/wkoch/Haskell/blob/master/ProjectEuler
