name:                ProjectEuler
version:             0.1.0.0
synopsis:            Project Euler solutions
homepage:            https://gitlab.com/wkoch/Haskell/tree/master/ProjectEuler
license:             MIT
license-file:        LICENSE
author:              William Koch
maintainer:          wkochbrg@gmail.com
copyright:           William Koch
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Gitlab at <https://gitlab.com/wkoch/Haskell/tree/master/ProjectEuler>

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Runner
                     , PE001, PE001.Internal
                     , PE002, PE002.Internal
                     , PE003, PE003.Internal
                     , PE004, PE004.Internal
                     , PE005, PE005.Internal
                     , PE006, PE006.Internal
                     , PE007, PE007.Internal
                     , PE008, PE008.Internal
                     , PE009, PE009.Internal
                     , PE010, PE010.Internal
                     , PE011, PE011.Internal
                     , PE012, PE012.Internal
                     , PE013, PE013.Internal
                     , PE014, PE014.Internal
  build-depends:       base >= 4.7 && < 5
                     , primes
                     , text
  default-language:    Haskell2010

executable ProjectEuler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , ProjectEuler
                     , cli
                     , primes
                     , text
  default-language:    Haskell2010

test-suite ProjectEuler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ProjectEuler
                     , hspec
                     , text
  other-modules:       PE001Spec, PE002Spec, PE003Spec, PE004Spec, PE005Spec
                     , PE006Spec, PE007Spec, PE008Spec, PE009Spec, PE010Spec
                     , PE011Spec, PE012Spec, PE013Spec, PE014Spec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/wkoch/Haskell/tree/master/ProjectEuler
