name:                pe011
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/wkoch/Haskell
license:             MIT
license-file:        LICENSE
author:              William Koch
maintainer:          wkochbrg@gmail.com
copyright:           2017 William Koch
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

executable pe011-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , pe011
                     , text
  default-language:    Haskell2010

test-suite pe011-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pe011
                     , text
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/wkoch/Haskell/tree/master/ProjectEuler/pe011
